# python-monorepo

./: .gitignore  README.md
_demo/: install-wheel.sh
app-a/: Dockerfile  README.md  pyproject.toml
app-a/app_a/: __main__.py
app-a/tests/: __init__.py  test_package.py
common-lib-pypi/: LICENSE.txt  README.md  pyproject.toml
common-lib-pypi/common_lib_pypi/: __main__.py
common-lib-pypi/tests/: test_package.py
dep-of-common-lib/: README.md  pyproject.toml
dep-of-common-lib/src/dep_of_common_lib/: __init__.py  __main__.py
dep-of-common-lib/tests/: test_package.py
outer-lib-pypi/: pyproject.toml
outer-lib-pypi/outer_lib_pypi/: __init__.py
outer-lib-pypi/tests/: test_package.py
