[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outer-lib-pypi"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "federicober", email = "federico.ober@hotmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["common-lib-pypi"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/outer-lib-pypi#readme"
Issues = "https://github.com/unknown/outer-lib-pypi/issues"
Source = "https://github.com/unknown/outer-lib-pypi"

[tool.hatch.version]
path = "outer_lib_pypi/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "dep-of-common-lib @ {root:uri}/../dep-of-common-lib",
  "common-lib-pypi @ {root:uri}/../common-lib-pypi",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=outer_lib_pypi --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["outer_lib_pypi/__init__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
